IDE/public/css/style.css
/* ... */
#beaglert-consoleForm {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  border-top: 1px solid black;
  height: 21px; }

#beaglert-consoleWrapper {
  overflow-x: auto;
  width: 100%; }

#beaglert-consoleWrapper span {
  white-space: pre-wrap; }

#beaglert-consoleWrapper > div {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  display: inline-block;
  min-width: 100%; }

.beaglert-console-log-in {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-shell::before {
  content: '#';
  color: inherit;
  margin: 0 14px;
  opacity: 0.6;
  padding-right: 0.65em; }

.beaglert-console-shell {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  color: #606096;
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-git::before {
  color: inherit;
  content: 'git:';
  margin: 0 7px;
  opacity: 0.6;
  padding-right: 0.65em; }

.beaglert-console-git {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  color: #609660;
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-make::before {
  color: inherit;
  content: 'make:';
  opacity: 0.6;
  padding-right: 0.65em; }

.beaglert-console-make {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-bela::before {
  color: inherit;
  content: 'bela:';
  opacity: 0.6;
  padding-right: 0.65em; }

.beaglert-console-bela {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  color: #406464;
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-log {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  padding: 4px 30px; }

.beaglert-console-warning::before {
  color: yellow;
  content: '!';
  margin: 0 14px;
  padding-right: 0.65em; }

.beaglert-console-warning {
  background-color: rgba(255, 255, 0, 0.2);
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-error::before {
  color: red;
  content: '!';
  margin: 0 14px;
  padding-right: 0.65em; }

.beaglert-console-error {
  background-color: rgba(255, 0, 0, 0.2);
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-iwarning::before {
  color: red;
  content: '!';
  margin: 0 14px;
  padding-right: 0.65em; }

.beaglert-console-iwarning {
  background-color: rgba(255, 255, 0, 0.2);
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-ierror::before {
  color: red;
  content: '!';
  margin: 0 14px;
  padding-right: 0.65em; }

.beaglert-console-ierror {
  background-color: rgba(255, 0, 0, 0.2);
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  padding: 4px 30px;
  text-indent: -1.65em; }

.beaglert-console-notify::before {
  color: green;
  content: 'i';
  margin: 0 14px;
  padding-right: 0.65em; }

.beaglert-console-notify {
  text-indent: -1.65em;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  padding: 4px 30px;
  background-color: rgba(0, 255, 0, 0.2);
  transition: background-color 1s ease-out, -webkit-transform 0.2s ease-out;
  -webkit-transition: background-color 1s ease-out, -webkit-transform 0.2s ease-out;
  transition: transform 0.2s ease-out, background-color 1s ease-out;
  transition: transform 0.2s ease-out, background-color 1s ease-out, -webkit-transform 0.2s ease-out; }

.beaglert-console-ierror, .beaglert-console-iwarning, .beaglert-console-error {
  transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out, -webkit-transform 0.1s ease-out; }

.beaglert-console-ierror > span:hover, .beaglert-console-iwarning > span:hover {
  cursor: pointer;
  text-decoration: underline; }

.beaglert-console-collapsed {
  -webkit-transform: scaleY(0);
          transform: scaleY(0); }

.beaglert-console-faded {
  background-color: rgba(255, 255, 255, 0.2); }

.beaglert-console-rejectnotification {
  background-color: rgba(255, 0, 0, 0.2);
  cursor: pointer; }

.beaglert-console-rejectnotification::before {
  content: '!';
  color: red;
  padding-right: 0.65em; }

#beaglert-console-inputRight {
  display: table-cell;
  width: 100%; }

#beaglert-console-inputLeft {
  display: table-cell; }

#beaglert-consoleInput {
  background-color: inherit;
  border: inherit;
  color: inherit;
  font-family: inconsolata;
  height: 100%;
  padding: 5px 5px;
  position: relative;
  width: 100%; }

#beaglert-consoleInput:focus {
  outline-width: 0; }

#beaglert-consoleInput-pre {
  color: inherit;
  display: inline;
  font-family: inconsolata;
  opacity: 0.2;
  padding: 5px;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap; }

/**** Documentation content styles ****/
.subsections .intro-content {
  margin-bottom: .5em; }

.subsections .docs-content {
  display: hidden; }
  .subsections .docs-content.show {
    display: visible; }

.subsections .intro-header {
  font-family: poppins_regular;
  font-size: 1.2em;
  line-height: 1em;
  -webkit-margin-before: 0;
          margin-block-start: 0;
  -webkit-margin-after: .5em;
          margin-block-end: .5em; }

.subsections .memberdef-title {
  font-family: inconsolata;
  font-weight: bold;
  font-size: 1em;
  line-height: 1.2em;
  -webkit-margin-before: .5em;
          margin-block-start: .5em;
  -webkit-margin-after: .5em;
          margin-block-end: .5em; }

.subsections li div p {
  padding: .5em 0 .75em;
  margin: 0; }

.subsections div ul li h4 {
  margin: 0; }

.subsections .examples-header {
  color: #009587;
  font-family: space_bold;
  font-size: 1.1em;
  margin: .5em; }

/* Dropdown Button */
button.dropbtn {
  background-color: #fff;
  border: 1px solid #00bea4;
  color: #00bea4;
  cursor: pointer;
  display: inline;
  font-family: poppins_regular;
  font-size: 14px;
  padding: 7px 16px;
  position: relative;
  text-align: left;
  width: 200px; }
/* ... */

